--- a/Final Report/Final-Report.Rmd
+++ b/Final Report/Final-Report.Rmd
@@ -531,6 +531,8 @@ part_tu04_sex_TRCHILDNUM_plot_plotting <- ggplot(part_sex_weighted_means_data_pl
   scale_x_continuous(breaks = seq(2003,2017,2)) + xlab("Year") + ylab("Average number of children") + labs(color="Sex", fill="Sex") + theme(axis.title.y = element_text(margin = margin(t = 0, r = 10, b = 0, l = 0)), axis.title.x = element_text(margin = margin(t = 10, r = 0, b = 0, l = 0)))
 ```
 
+We have now verified that the conlusions are correct: the percentage of American's who partake in caring for & helping nonhousehold members has decreased over the period from 2003 to 2017. There also seems to be a link between the number of children in the household and the participation percentage.
+
 ```{r part_tu04 Sex Plot with Number of Children Plotting, message=FALSE, echo=FALSE}
 print(part_tu04_sex_TRCHILDNUM_plot_plotting)
 ```
